2011-05-28  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/syscalls.list: Add setns entry.
	* sysdeps/unix/sysv/linux/bits/sched.h: Declare setns.
	* sysdeps/unix/sysv/linux/Versions [GLIBC_2.14]: Add setns.

2011-05-27  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12813]
	* sysdeps/unix/sysv/linux/x86_64/init-first.c (__vdso_getcpu):
	Retrieve getcpu symbol from vDSO.  Substitute with vsyscall if not
	available.
	* sysdeps/unix/sysv/linux/x86_64/sched_getcpu.S [SHARED]: Use
	__vdso_getcpu.

	[BZ #12814]
	* iconvdata/Makefile (tests): Add bug-iconv9.
	* iconvdata/bug-iconv9.c: New file.

2011-05-27  Andreas Schwab  <schwab@redhat.com>

	[BZ #12814]
	* iconvdata/iso-2022-jp.c (BODY): Fix invalid variable shadowing.

2011-05-25  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/sys/user.h
	(struct user_regs_struct): Change intcs field back to cs.

2011-05-25  Ulrich Drepper  <drepper@gmail.com>

	* po/ja.po: Update from translation team.

2011-05-23  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12795]
	* sysdeps/unix/sysv/linux/bits/resource.h (RLIMIT_RTTIME): Define.
	* sysdeps/unix/sysv/linux/sparc/bits/resource.h: Likewise.

2011-05-20  Andreas Schwab  <schwab@redhat.com>

	* stdlib/longlong.h: Update from GCC.

2011-05-23  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/sysconf.c (HAS_CPUCLOCK): Add
	parameter name.
	* sysdeps/unix/sysv/linux/sysconf.c (has_cpuclock, HAS_CPUCLOCK):
	Add parameter name.
	(__sysconf): Pass it down.

2011-05-22  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12671]
	* nis/nss_nis/nis-alias.c (_nss_nis_getaliasbyname_r): Use malloc in
	some situations.
	* nscd/nscd_getserv_r.c (nscd_getserv_r): Likewise.
	* posix/glob.c (glob_in_dir): Take additional parameter alloca_used.
	add in in __libc_use_alloca calls.  Adjust callers.
	(glob): Use malloc in some situations.

	* elf/dl-runtime.c (_dl_profile_fixup): Also store LA_SYMB_NOPLTENTER